brice entering the game

--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "my-app",
+  "name": "blog",
   "version": "0.1.0",
   "private": true,
   "scripts": {
     "dev": "rm -rf graph-data.json && next dev",
-    "build": "rm -rf graph-data.json && next build",
+    "build": "next build && next export",
     "start": "next start",
-    "deploy": "yarn build && git add . && git commit -m '...' && git push"
+    "deploy": "yarn build && aws s3 sync out/. s3://bricelalu.fr"
   },
   "dependencies": {
     "@emotion/cache": "latest",
