--- a/package.json
+++ b/package.json
@@ -4,9 +4,8 @@
   "private": true,
   "scripts": {
     "dev": "rm -rf graph-data.json && next dev",
-    "build": "next build && next export",
+    "build": "next lint && next build && next export",
     "start": "next start",
-    "lint": "next lint",
     "deploy": "yarn build && aws s3 sync out/. s3://bricelalu.fr && open http://bricelalu.fr"
   },
   "dependencies": {
